@@ -30,6 +30,7 @@
 # /etc/shadow
 # /etc/login.defs
 # /etc/shells
+# /etc/skel/
 
 # NIS support will come later.
 
@@ -48,6 +49,7 @@ require "___scriptsdir___/file.pl";
 require "___scriptsdir___/xml.pl";
 require "___scriptsdir___/replace.pl";
 
+$progress_max = 4;
 
 $DEBUG = 1; # 1 == command; no debug. 2 == no commands, just report. 3 == report and command.
 $TEST_NIS = 0;
@@ -63,10 +65,6 @@ $description =<<"end_of_description;";
        Manages system users.
 end_of_description;
 
-$progress_max = 3;
-
-
-
 # --- System config file locations --- #
 
 # We list each config file type with as many alternate locations as possible.
@@ -77,6 +75,7 @@ $progress_max = 3;
 @group_names =      ( "/etc/group" );
 @login_defs_names = ( "/etc/login.defs" );
 @shell_names =      ( "/etc/shells" );
+@skel_dir =         ( "/etc/skel" );
 
 # Where are the tools?
 
@@ -164,7 +163,7 @@ for ($i = 0; $groups_prop_array[$i] ne ""; $i += 2)
   "GID_MIN" , "new_group_min_id",
   "GID_MAX" , "new_group_max_id",
   "USERDEL_CMD" , "del_user_additional_command",
-  "CREATE_HOME" , "create_home", 
+  "CREATE_HOME" , "create_home",
 	"", "");
 
 for ($i = 0; $login_defs_prop_array[$i] ne ""; $i += 2)
@@ -207,7 +206,38 @@ sub arr_cmp_recurse
 }
 
 
-# --- Confignuration manipulation --- #
+# --- Configuration manipulation --- #
+
+sub read_skel_dir
+{
+  my (@files, $file, $name);
+  my $fname = "";
+
+  &xst_report_enter ();
+  
+  foreach $name (@skel_dir) {
+    if (opendir (DIR, $name)) {
+      $fname = $name;
+      last;
+    }
+  }
+
+  if ($fname eq "") {
+    &xst_report ("read_skel_dir_failed", "@skel_dir");
+    return undef;
+  }
+  
+  foreach $file (readdir (DIR)) {
+    next if ($file eq "." || $file eq "..");
+    push (@files, $file);
+  }
+  closedir DIR;
+
+  &xst_report ("read_skel_dir_success", $fname);
+  &xst_report_leave ();
+  
+  return \@files
+}
 
 sub read_login_defs
 {
@@ -228,6 +258,8 @@ sub read_login_defs
     $login_defs{$login_defs_prop_map{$line[0]}} = $line[1];
   }
 
+  $login_defs{"files"} = &read_skel_dir ();
+  
   close (FILE);
 }
 		
@@ -923,8 +955,18 @@ sub xml_print
 	foreach $key (keys %login_defs)
 	{
 	  if ($key ne "") {
-	    &xst_xml_print_line ("<$key>" . $login_defs{$key} . "</$key>\n");
-	  }
+      if ($key ne "files") {
+        &xst_xml_print_line ("<$key>" . $login_defs{$key} . "</$key>\n");
+      } else {
+        &xst_xml_print_line ("<files>\n");
+        &xst_xml_enter ();
+        foreach $j (@{$login_defs{$key}}) {
+          &xst_xml_print_line ("<file>" . $j . "</file>\n");
+        }
+        &xst_xml_leave ();
+        &xst_xml_print_line ("</files>");
+      }
+    }
 	}
 	&xst_xml_leave ();
 	&xst_xml_print_line ("</logindefs>\n");
