@@ -1,3 +1,8 @@
+2001-05-17  Tambet Ingo  <tambet@ximian.com>
+
+	* users-conf.in (read_skel_dir): Implement.
+	(xml_print): Print out files for Profiles.
+
 2001-05-16  Hans Petter Jansson  <hpj@ximian.com>
 
 	* shares-conf.in (xml_print_export_nfs): Add (unset) names to NFS exports.
